--- a/src/App.css
+++ b/src/App.css
@@ -49,3 +49,11 @@
   cursor: pointer;
   font-size: 24px;
 }
+input {
+  margin: 5px;
+  padding: 5px;
+}
+button{
+  margin: 5px;
+  padding: 5px 15px;
+}
